--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.15.3",
+    "little-loader": "^0.2.0",
+    "office-addin-validator": "^1.0.1",
+    "office-ui-fabric-js": "^1.3.0",
+    "query-string": "4.3.4",
     "react": "^15.6.1",
+    "react-bootstrap": "0.31.2",
     "react-dom": "^15.6.1",
+    "react-intl": "^2.3.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
