--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "0.15.3",
+    "classnames": "^2.2.5",
     "little-loader": "^0.2.0",
     "office-addin-validator": "^1.0.1",
     "office-ui-fabric-js": "^1.3.0",
