--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "axios": "0.15.3",
     "classnames": "^2.2.5",
+    "hapi": "^16.5.2",
+    "inert": "^4.2.1",
     "little-loader": "^0.2.0",
     "lodash": "^4.17.4",
-    "office-addin-validator": "^1.0.1",
     "office-ui-fabric-js": "^1.3.0",
     "query-string": "4.3.4",
     "react": "^15.6.1",
@@ -17,10 +18,13 @@
     "react-scripts": "1.0.10"
   },
   "devDependencies": {
-    "react-test-renderer": "^15.6.1"
+    "concurrently": "^3.5.0",
+    "office-addin-validator": "^1.0.1",
+    "react-test-renderer": "^15.6.1",
+    "selfsigned": "^1.10.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"node server/server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -29,5 +33,6 @@
     "type": "git",
     "url": "git+https://github.com/datadotworld/excel-add-in.git"
   },
-  "license": "SEE LICENSE IN LICENSE.txt"
+  "license": "SEE LICENSE IN LICENSE.txt",
+  "proxy": "http://localhost:3001"
 }
