--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "little-loader": "^0.2.0",
     "lodash": "^4.17.4",
     "office-ui-fabric-js": "^1.3.0",
+    "papaparse": "^4.3.6",
     "query-string": "4.3.4",
     "react": "^15.6.1",
     "react-bootstrap": "0.31.2",
