Add array.find polyfill for IE11 support Fix some layout issues in IE11 Add a minimum excel API requirement set

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array.prototype.find": "^2.0.4",
     "axios": "0.15.3",
     "classnames": "^2.2.5",
     "hapi": "^16.5.2",
