--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"node server/server.js\"",
     "build": "react-scripts build",
-    "prod": "nodemon server/server.js",
+    "prod": "node server/server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-prebuild": "yarn install --frozen-lockfile && yarn build"
