--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "office-ui-fabric-js": "^1.3.0",
     "papaparse": "^4.3.6",
     "query-string": "4.3.4",
-    "react": "^15.6.1",
-    "react-bootstrap": "0.31.2",
-    "react-dom": "^15.6.1",
-    "react-intl": "^2.3.0",
+    "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.0",
+    "react-intl": "^2.7.2",
     "react-scripts": "1.0.10"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
     "office-addin-validator": "^1.0.1",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.6.0",
     "selfsigned": "^1.10.1"
   },
   "scripts": {
