--- a/package.json
+++ b/package.json
@@ -13,25 +13,32 @@
     "office-ui-fabric-js": "^1.3.0",
     "papaparse": "^4.3.6",
     "query-string": "4.3.4",
-    "react": "^15.6.1",
-    "react-bootstrap": "0.31.2",
-    "react-dom": "^15.6.1",
-    "react-intl": "^2.3.0",
+    "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.0",
+    "react-intl": "^2.7.2",
     "react-scripts": "1.0.10"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "husky": "^1.1.2",
     "office-addin-validator": "^1.0.1",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.6.0",
     "selfsigned": "^1.10.1"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"node server/server.js\"",
     "build": "react-scripts build",
     "prod": "node server/server.js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-prebuild": "yarn install --frozen-lockfile && yarn build"
+    "heroku-prebuild": "yarn install --frozen-lockfile && yarn build",
+    "precommit": "npm run test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   },
   "repository": {
     "type": "git",
