--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "cross-env": "^5.2.0",
     "husky": "^1.1.2",
     "office-addin-validator": "^1.0.1",
     "react-test-renderer": "^16.6.0",
@@ -31,7 +32,7 @@
     "start": "concurrently \"react-scripts start\" \"node server/server.js\"",
     "build": "react-scripts build",
     "prod": "node server/server.js",
-    "test": "CI=true react-scripts test --env=jsdom",
+    "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-prebuild": "yarn install --frozen-lockfile && yarn build",
     "precommit": "npm run test"
