--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-intl": "^2.7.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.10"
   },
   "devDependencies": {
