--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
-version: 2
+version: 2.1
+
 jobs:
   build:
     docker:
@@ -21,3 +22,27 @@ jobs:
       - store_artifacts:
           path: build
           prefix: build
+
+  trigger-wrapper-build-deploy:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - run:
+          name: Trigger build-deploy in excel-add-in-private
+          command: |
+            curl -X POST https://circleci.com/api/v2/project/github/datadotworld/excel-add-in-private/pipeline \
+              -H "Circle-Token: $CIRCLE_TOKEN" \
+              -H "Content-Type: application/json" \
+              -d '{"branch":"main"}'
+
+workflows:
+  build:
+    jobs:
+      - build
+
+      - trigger-wrapper-build-deploy:
+          filters:
+            branches:
+              only:
+                - main
