test trigger of main pipeline 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,10 @@ workflows:
     jobs:
       - build
 
-      - trigger-wrapper-build-deploy:
+  trigger-predeploy:
+    jobs:
+      - trigger-wrapper-build-deploy
+      # - trigger-wrapper-build-deploy:
           # filters:
           #   branches:
           #     only:
